[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/SceneBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/QuizScene.gd" type="Script" id=2]
[ext_resource path="res://UI/typography/Heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/kiko_avatar.png" type="Texture" id=4]
[ext_resource path="res://UI/Components/NeoMButton.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.847059, 0.847059, 0.847059, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.584314, 0.756863, 0.121569, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="QuizScene" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer" index="3"]

[node name="Footer" type="Panel" parent="." index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -349.0
margin_right = -0.00012207
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" parent="Footer" index="0" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -493.109
margin_top = -30.7006
margin_right = -76.1091
margin_bottom = 46.2994
custom_styles/panel = SubResource( 2 )
texture_min_size = 46
font_color = Color( 0.588235, 0.74902, 0.0509804, 1 )
text = "asdasdsadsadsa"

[node name="Panel4" parent="Footer" index="1" instance=ExtResource( 7 )]
margin_left = 583.0
margin_top = 24.667
margin_right = -49.0
margin_bottom = -237.333
font_color = Color( 0.466667, 0.72549, 0.141176, 1 )
text = "Weiter"

[node name="kiko_avatar - placeholder" type="Sprite" parent="." index="2"]
position = Vector2( 253.156, 511.581 )
texture = ExtResource( 4 )

[node name="SpeechBubbleHolder" type="Panel" parent="kiko_avatar - placeholder" index="0"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = -464.0
margin_right = 397.0
margin_bottom = -196.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="DialogLine" type="Label" parent="kiko_avatar - placeholder/SpeechBubbleHolder" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 16.0
margin_right = -38.0
margin_bottom = -22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nette Ansprache; Warum ist das hier interessant"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="VBoxContainer/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
